--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>About | Lidia Sabater</title>
+    <title>Portfolio | Lidia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
@@ -22,16 +22,20 @@
 
     <div id="main-container" class="container">
         <section class="main-section">
-            <h1>About Me</h1>
-            <img src="rick p3.jpg" class="auth-image">
-            <p>dghnsgngn bdsb ds s bds bdsf bsdfb sdf bdf sbdsf bgrheghhnenne</p>
-            <p>bdsbbds fb sdb sdfbsdbb  bdfb d fdb sdb dfs bsdb bfdsb dfb dfsb </p>
+            <h1>Portfolio</h1>
+            <div class="work">
+                <a href="https://0638781.github.io/Favotite-ThingsWebsite/" target="_blank">
+                <img src="fav star.jpg"/>               
+                <h3>Favorite Things Website</h3>
+                </a>
+            </div>
         </section>
 
         <section class="sidebar">
             <div>
                 <h2>Connect With Me</h2>
                 <a href="https://github.com/0638781" target="_blank">
+                    
                     <img src="github-cat-in-a-circle_318-41747.jpg" class="social">
                 </a>
             </div>
